# META-Step-Alignment

./: .gitignore  README.md  pyproject.toml
docs/: app.js  data.json  index.html  styles.css
examples/: metadata.example.json
src/step_aligner/: cli.py  cluster.py  features.py  folder.py  gemini.py  io.py  models.py  pipeline.py  site.py  video.py  wearable.py
